# OMTeam

./: README.md  api_server.py  pyproject.toml
app/: main.py
app/api/: schemas.py  services.py
app/api/endpoints/: chat.py  daily_analysis.py  daily_missions.py  weekly_analysis.py
tests/: test_api_endpoints.py  test_routing.py
